<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:focusable="true" 
        android:focusableInTouchMode="true"
        android:layout_width="0px" 
        android:layout_height="0px"/>
        <EditText
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:hint="@string/set_host"
            android:maxLines="1"
            android:background="@drawable/text_frame"
            android:text="@string/tcp_address" 
            android:textColor="@android:color/black">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">
            <Button
                android:id="@+id/bind_service"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/bind_service" />

            <Button
                android:id="@+id/connect_adb_service"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/connect_adb_service" />
        </LinearLayout>
    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:fillViewport="true" >

            <TextView
                android:id="@+id/text_info"
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:gravity="top"
                android:text="@string/test"
                android:textColor="@android:color/black" >

            </TextView>
    </ScrollView>
<!--     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contact_content"
        android:visibility="gone"/> -->
</LinearLayout>

