<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#E0FFFF" >
    </android.support.v4.view.ViewPager>

    <ImageView 
        android:id="@+id/cursor"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:scaleType="matrix"/>
    <LinearLayout 
        android:id="@+id/tab_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/tab_adbclient"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/tab_adbclient"/>
        <TextView 
            android:id="@+id/tab_comment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/tab_comment"/>
        <TextView 
            android:id="@+id/tab_private"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/tab_private"/>
        </LinearLayout>
        
</LinearLayout>
